--- a/src/components/dashboard/areaCards/AreaCards.scss
+++ b/src/components/dashboard/areaCards/AreaCards.scss
@@ -3,6 +3,17 @@
   grid-template-columns: repeat(5, 1fr);
   margin-top: 12px;
   gap: 16px;
+  @media (max-width: 2000px) {
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  @media (max-width: 1500px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media (max-width: 1350px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 
   @media (max-width: 992px) {
     grid-template-columns: repeat(2, 1fr);
